# ZylOS

./: .clang-format  .gitignore  AUDIT_FOUNDATION_2026_03_30.md  AUDIT_FOUNDATION_ROUND2_2026_03_31.md  AUDIT_REPORT_2026_03_28.txt  AUDIT_ROUND3_COMMERCIAL_2026_03_31.md  AUDIT_ROUND4_ANDROID_2026_03_31.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  meson.build
.claude/: launch.json
.github/workflows/: build.yml
apps/browser/: app.json  i18n.js  index.html
apps/browser/css/: browser.css
apps/browser/js/: browser.js
apps/calc/: app.json  i18n.js  index.html
apps/calc/css/: calc.css
apps/calc/js/: calc.js
apps/camera/: app.json  i18n.js  index.html
apps/camera/css/: camera.css
apps/camera/js/: camera.js
apps/clock/: app.json  i18n.js  index.html
apps/clock/css/: clock.css
apps/clock/js/: clock.js
apps/contacts/: app.json  i18n.js  index.html
apps/contacts/css/: contacts.css
apps/contacts/js/: contacts.js
apps/files/: app.json  i18n.js  index.html
apps/files/css/: files.css
apps/files/js/: files.js
apps/gallery/: app.json  i18n.js  index.html
apps/gallery/css/: gallery.css
apps/gallery/js/: gallery.js
apps/home/: app.json  i18n.js  index.html
apps/home/css/: home.css
apps/home/js/: home.js  i18n.js
apps/keyboard/: app.json  i18n.js
apps/keyboard/css/: keyboard.css
apps/keyboard/js/: keyboard.js  prediction.js
apps/lockscreen/: app.json  i18n.js  index.html
apps/lockscreen/css/: lockscreen.css
apps/lockscreen/js/: lockscreen.js
apps/messages/: app.json  i18n.js  index.html
apps/messages/css/: messages.css
apps/messages/js/: messages.js
apps/music/: app.json  i18n.js  index.html
apps/music/css/: music.css
apps/notes/: app.json  i18n.js  index.html
apps/oobe/: app.json  i18n.js  index.html
apps/phone/: app.json  i18n.js  index.html
apps/settings/: app.json  i18n.js  index.html
apps/shared/: bridge.js  clock.js  gesture.js  i18n.js  rtl.css  runtime.css  toast.js  touch-scroll.js
apps/statusbar/: app.json  i18n.js  index.html
apps/store/: app.json  i18n.js  index.html
apps/system/: app-registry.js  content-provider.js  intent.js  permission-dialog.js  permissions.js  sandbox.js  security.js  services.js
apps/terminal/: app.json  i18n.js  index.html
apps/weather/: app.json  i18n.js  index.html
board/bpi-f3/: README.md  cross-riscv64.ini  fit-image.its  u-boot-env.txt
compositor/: meson.build
compositor/include/: bpi_compositor.h  zyl_compositor.h
compositor/src/: main.c
compositor/src/input/: gesture.c  gesture.h
compositor/src/output/: output.c  output.h
compositor/src/view/: view.c  view.h
compositor/tests/: test_touch_regressions.c
docs/: API_REFERENCE.md  APPSTORE_API.md  APP_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  AUDIT_REPORT.md  DEPLOYMENT_GUIDE.md  ROADMAP_COMMERCIAL.md  SECURITY.md
emulator/: README.md  index.html
emulator-app/: Cargo.toml  Info.plist  README.md  tauri.conf.json
emulator-app/capabilities/: default.json
emulator-app/icons/: icon.icns
emulator-app/scripts/: build-image.sh  deploy-apps.sh
emulator-app/src/: lib.rs  main.rs  state.rs
emulator-app/src/commands/: boot.rs  config.rs  emulated_services.rs  filesystem.rs  mod.rs  network.rs  os_image.rs  resource.rs  settings.rs  terminal.rs
emulator-app/src/platform/: linux.rs  macos.rs  mod.rs
emulator-app/src/resource/: disk_image.rs  memory_limit.rs  mod.rs
emulator-app/ui/: index.html
emulator-app/ui/css/: boot.css  config.css  emulator.css
emulator-app/ui/js/: boot-sequence.js  config-ui.js  emu-i18n.js  emulator.js  hal-browser.js  hal-tauri.js  services.js
emulator/css/: emulator.css
emulator/js/: emulator.js  services.js
runtime/hal/: hal.h  hal_audio.c  hal_battery.c  hal_bt.c  hal_cpu.c  hal_display.c  hal_emulator.c  hal_linux.c  hal_storage.c  hal_wifi.c  meson.build
runtime/services/appstore/: appstore.c  appstore.h  meson.build
runtime/services/location/: location.c  location.h  location_geoip.c  location_gps.c  location_internal.h  location_wifi.c  meson.build
runtime/services/power/: meson.build  power.c  power.h  power_backlight.c  power_cpu.c  power_display.c  power_internal.h  power_wakelock.c
runtime/wam/: meson.build
runtime/wam/src/: wam.c  wam.h  zygote.c  zygote.h
runtime/wam/src/bridge/: bridge.c  bridge.h  bridge.js
runtime/wam/src/dbus/: dbus_service.c  dbus_service.h
runtime/wam/src/lifecycle/: lifecycle.c  lifecycle.h
runtime/wam/src/manifest/: manifest.c  manifest.h
runtime/wam/src/oom/: oom.c  oom.h
system/: timesyncd.conf  zyl-accessibility.service  zyl-account.service  zyl-alarm.service  zyl-apparmor.service  zyl-audio.service  zyl-auth.service  zyl-bluetooth.service  zyl-camera.service  zyl-compositor.service  zyl-crash-handler.service  zyl-credential.service  zyl-display.service  zyl-input.service  zyl-location.service  zyl-logger.service  zyl-nfc.service  zyl-notification.service  zyl-os.target  zyl-power.service  zyl-sensors.service  zyl-telemetry.service  zyl-telephony.service  zyl-usb.service  zyl-user.service  zyl-wam.service  zyl-wifi.service
system/apparmor/: zyl-app-default  zyl-audio  zyl-bluetooth  zyl-camera  zyl-compositor  zyl-credential  zyl-telephony  zyl-wam
system/dts/: bpi-f3-zyl.dts
system/plymouth/: install.sh
system/recovery/: factory-reset.sh  recovery.service  recovery.sh
system/sysusers.d/: zyl-wam.conf
system/tmpfiles.d/: zyl-wam.conf
tests/: COORDINATOR_FOLLOWUPS_W5.md  README.md  audit_licenses.sh  bench_performance.sh  check-os-independence.sh  meson.build  test_bridge_dispatch.c  test_doctype.sh  test_gesture.c  test_integration.sh  test_js_syntax.sh  test_manifest.c  test_manifests.sh  test_notification.c  test_services.js  test_services_dbus.sh  verify-all.sh
tests/fuzz/: README.md  fuzz_fs_path.c  fuzz_json_dispatch.c
tests/fuzz/include/: mock_webkit.h
tests/fuzz/include/webkit/: webkit.h
tests/fuzz/include/webkit2/: webkit2.h
tools/: gen-boot-keys.sh  profile.sh  riscv64-cross.ini  setup-toolchain.sh  sign-image.sh  sign-ospkg.sh  zyl
(+136 files in other folders)
