[package]
name = "zyl-emulator"
version = "0.1.0"
edition = "2021"
description = "Zyl OS Device Emulator — Tauri 2.x Desktop Application"
license = "GPL-3.0-only"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
env_logger = "0.11"
tauri-plugin-dialog = "2.6.0"
tokio = { version = "1", features = ["sync"] }
regex = "1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "resource", "mount"] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.29", features = ["fs", "resource"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
